--- a/src/Common/style.css
+++ b/src/Common/style.css
@@ -15,7 +15,14 @@
 }
 
 
-/* 公共按钮颜色 */
+/* 底部公共按钮颜色 */
+
+.bottom p {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    padding-right: 20px;
+}
 
 .styleBlue {
     background-color: #08B9FE !important;
