--- a/src/Css/index/index.css
+++ b/src/Css/index/index.css
@@ -1,3 +1,6 @@
+body{
+    background-color: #F6F5F9 !important;
+}
 .blueBg {
     background: url('../../images/index/bg.png');
     background-size: 100% 100%;
