--- a/beauty-index/css/animation.css
+++ b/beauty-index/css/animation.css
@@ -28,6 +28,8 @@
     opacity: 0;
     transition: all 0.6s ease-in-out;
     font-style: italic;
+    position: absolute;
+    top: 40%;
     /* color: ; */
 }
 
@@ -43,7 +45,9 @@
     position: absolute;
 }
 
-.item .idx2-text {}
+.item .idx2-text:hover {
+    
+}
 
 .item img {
     float: left;
@@ -55,6 +59,5 @@
 
 .item:hover h3 {
     opacity: 1;
-    margin: 0 auto;
-    transform: translate3d(0, 0, 0);
+    transform: translateX(70%);
 }
