--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -57,6 +57,23 @@
   margin: 0;
   position: relative;
   font-weight: normal;
+  border-color: currentcolor;
+  border-style: solid;
+  border-width: 0;
+}
+
+a,
+a:focus,
+a:hover {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+a:focus,
+a:active,
+div:focus {
+  outline: none;
 }
 
 body {
@@ -71,4 +88,8 @@ body {
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.text-gray {
+  color: #909399
 }
